[gd_scene load_steps=7 format=3 uid="uid://dhqv87r5d2eah"]

[ext_resource type="Script" path="res://scripts/ChallengeRoom.gd" id="1_ckhav"]
[ext_resource type="PackedScene" uid="uid://jahnm8trx7lc" path="res://scenes/TileGeneration/ChallengeRoomTilemap.tscn" id="2_i141v"]
[ext_resource type="PackedScene" uid="uid://dijuot5lvtk64" path="res://scenes/RoomEnablePillar.tscn" id="4_cc1hn"]
[ext_resource type="FontFile" uid="uid://ccejmh3hhfg44" path="res://assets/fonts/Fonts/Kenney Mini Square Mono.ttf" id="4_yssrr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m7j4v"]
size = Vector2(251, 163)

[sub_resource type="NavigationPolygon" id="NavigationPolygon_bk3vc"]
vertices = PackedVector2Array(127, -1, -127, -1, -127, -194, 127, -194)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-128, 0, -128, -195, 128, -195, 128, 0)])
source_geometry_group_name = &"navigation_polygon_source_group"
agent_radius = 1.0

[node name="ChallengeRoom" type="Node2D"]
script = ExtResource("1_ckhav")

[node name="TileMap" parent="." instance=ExtResource("2_i141v")]
position = Vector2(0, 0)

[node name="WaveTimer" type="Timer" parent="."]
wait_time = 6.0

[node name="EnemyCounter" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyCounter"]
position = Vector2(0.5, -97.5)
shape = SubResource("RectangleShape2D_m7j4v")

[node name="SurviveTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="SurviveLabel" type="RichTextLabel" parent="."]
visible = false
offset_left = -53.0
offset_top = -84.0
offset_right = 62.0
offset_bottom = -55.0
theme_override_colors/default_color = Color(1, 0.357326, 0.290208, 1)
theme_override_fonts/normal_font = ExtResource("4_yssrr")
bbcode_enabled = true
text = "[wave] SURVIVE!"

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
navigation_polygon = SubResource("NavigationPolygon_bk3vc")

[node name="RoomEnablePillar" parent="." instance=ExtResource("4_cc1hn")]
position = Vector2(0, -16)

[node name="RewardTimer" type="Timer" parent="."]
wait_time = 0.128

[connection signal="timeout" from="WaveTimer" to="." method="_on_wave_timer_timeout"]
[connection signal="body_entered" from="EnemyCounter" to="." method="_on_enemy_counter_body_entered"]
[connection signal="body_exited" from="EnemyCounter" to="." method="_on_enemy_counter_body_exited"]
[connection signal="timeout" from="SurviveTimer" to="." method="_on_survive_timer_timeout"]
[connection signal="timeout" from="RewardTimer" to="." method="_on_reward_timer_timeout"]
